# ImageMagick_Cmake

./: CMakeLists.txt  README.md
Magick++/: CMakeLists.txt
VisualMagick/: UpgradeToVS2010.cmd  UpgradeToVS2012.cmd  build.bat
VisualMagick/coders/: LIBRARY.txt
VisualMagick/configure/: configure.bat  configure.cpp  configure.dsp  configure.h  configure.rc  resource.h  target_page.cpp  target_page.h
VisualMagick/installer/: im-x86-dll-Q8.iss  im-x86-static-Q8.iss
VisualMagick/installer/Magick++_Demo/: button.dsp  demo.dsp  detrans.dsp  flip.dsp  gravity.dsp  piddle.dsp  shapes.dsp  zoom.dsp
VisualMagick/installer/inc/: files-base.isx  files-dlls.isx  version.isx
VisualMagick/magick/: magick-baseconfig.h.in
VisualMagick/png/: png.rc
VisualMagick/tests/: run_rwfile.bat
VisualMagick/ttf/: ttf.rc
VisualMagick/wand/: wand.rc
bzlib/: CMakeLists.txt
cairo/: CMakeLists.txt
coders/: CMakeLists.txt  pdb.c
contrib/win32/ATL7/ImageMagickObject/: BuildImageMagickObject.cmd
croco/: CMakeLists.txt
ffi/: CMakeLists.txt
filters/: CMakeLists.txt
glib/: CMakeLists.txt
jbig/: CMakeLists.txt
jp2/: CMakeLists.txt
jpeg/: CMakeLists.txt  config.h
lcms/: CMakeLists.txt
librsvg/: CMakeLists.txt
libxml/: CMakeLists.txt
lqr/: CMakeLists.txt
magick/: CMakeLists.txt  magick-baseconfig.h
pango/: CMakeLists.txt
pango/pango/: pango-language-sample-table.h
pixman/: CMakeLists.txt
png/: CMakeLists.txt
tiff/: CMakeLists.txt
ttf/: CMakeLists.txt
utilities/: CMakeLists.txt
wand/: CMakeLists.txt
webp/: CMakeLists.txt
wmf/: CMakeLists.txt
wmf/src/extra/gd/: gd_jpeg.c
zlib/: CMakeLists.txt
